# Autopilot-DSI-UVigo

./: .gitignore  README.md
dependencies/: zenoh-cpp-0.10.0.1.deb
lib/RTIMULib/Linux/: CMakeLists.txt
lib/RTIMULib/RTEllipsoidFit/: magCorr.dta
src/backend/: backend.py  requirements.txt
src/backend/test/: old_back.py  publisher.py  subscriber.py
src/backend/zenoh-eclipse/: z_pub.py  z_sub.py
src/frontend/: app.py  requirements.txt  ssh_terminal.py
src/frontend/static/: scripts.js  styles.css
src/frontend/templates/: index.html  terminal.html
src/lib/RTIMULib/RTEllipsoidFit/: magRaw.dta
src/modules/: CMakeLists.txt
src/modules/attitude/: CMakeLists.txt  RTIMULib.ini  attitude.cpp
src/modules/autopilot/: CMakeLists.txt  autopilot.cpp
src/modules/constants/: CMakeLists.txt  constants.cpp
src/modules/mixer/: CMakeLists.txt  mixer.cpp
src/modules/motor/: CMakeLists.txt  motor.cpp
src/modules/radio/: CMakeLists.txt  radio.cpp
src/run/: CMakeLists.txt  run.cpp
src/test/AHRS/: CMakeLists.txt
src/test/zenoh/: z_sub
test/AHRS/: AHRS.cpp
test/servo/: CMakeLists.txt  servo.cpp
test/zenoh/: z_pub  zc_simple
